# rtic_v71

./: Cargo.toml  Embed.toml  README.md  cli.gdb  lsusb.txt  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
examples/: clkout.rs  hello.rs  led.rs  rtt_clkout_ext.rs  rtt_hello.rs  rtt_usb.rs  rtt_usb_bus.rs  rtt_usb_bus_serial.rs  usb_serial.rs
src/: bus.rs  lib.rs  main.rs  peripheral_identifiers.rs
