[package]
authors = ["Per Lindgren <per.lindgren@ltu.se>"]
edition = "2021"
readme = "README.md"
name = "x7x_usb"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.4", features = ["linker-plugin-lto"] }
cortex-m-semihosting = "0.5.0"

cortex-m-rtic = "1.1.2"
embedded-hal = "0.2.7"

# Panic handlers, comment out all but one to generate doc!
# panic-halt = "0.2.0"

# Uncomment for the itm panic examples.
# panic-itm = "0.4.2"

# Uncomment for the semihosting examples.
# panic-semihosting = "0.6.0"

# Tracing
# rtt-target = { version = "0.3.1", features = ["cortex-m"] }

# Monotonic timers
# systick-monotonic = "1.0.0"
# dwt-systick-monotonic = "1.0.0"
# nb = "1.0.0"
usb-device = "0.2.8"
bare-metal = "1.0.0"
usbd-serial = "0.1.1"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
# fugit = "0.3.5"

# Tracing
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
bitfield = "0.13.2"


[dependencies.atsamx7x-hal]
git = "https://github.com/GrepitAB/atsams70-rust"
branch = "feat/pmc"
# version = "0.1.0"
features = ["samv71q21b-rt"]

[profile.dev]
incremental = false
codegen-units = 1
# overflow-checks = false # uncomment to disable overflow checks for dev/debug builds  

[profile.release]
incremental = false
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations

